# resolve-rubik-cube

./: README.md  cube.py  plot.ipynb  pyproject.toml  relatorio_resultados.csv  results.csv  rubik_v3.py  rubik_v3_otimizado.py  run_solver_interface.py
src/: cube_interactive.py  projection.py  solvers.py  utils.py
