[project]
name = "resolve-rubik-cube"
version = "0.1.0"
description = ""
authors = [
    {name = "Marco Antonio Rodrigues Gomes de Souza",email = "94053824+Marco-Antonio-Rodrigues@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pycuber (>=0.2.2,<0.3.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

